--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                 </button>
             </div>
             <div class="modal-body">
-                <table data-ajax="tableAjaxRequest" data-search="true"
+                <table data-ajax="tableAjaxRequest" data-pagination="true"
+                       data-search="true"
                        data-search-text=""
                        data-show-refresh="true"
                        data-toggle="table"
-                       data-pagination="true"
                        data-url="https://coinwar.santaclaragives.org/standings"
                        id="standings-table">
                     <thead>
@@ -446,8 +446,8 @@
                     <a data-project="medical" data-target="#projectModal" data-toggle="modal" href="javascript:void(0)">
                         <h2>Medical
                             Supplies</h2></a>
-                    <p>Hospitals are rapidly running out of supplies. Santa Clara Valley Medical Center is the largest
-                        provider of essential health services to vulnerable populations in our region.</p>
+                    <p>Hospitals are rapidly running out of supplies and healthcare workers are tirelessly working
+                        against the clock. Santa Clara’s Valley Medical Center Foundation needs your help.</p>
                     <a class="text-uppercase" data-project="medical" data-target="#projectModal" data-toggle="modal"
                        href="javascript:void(0)">read more</a>
                 </div>
@@ -480,10 +480,9 @@
                 </div>
                 <div class="details">
                     <a data-project="local" data-target="#projectModal" data-toggle="modal" href="javascript:void(0)">
-                        <h2>Community
-                            Non-Profits</h2></a>
+                        <h2>Local Food Bank</h2></a>
                     <p>Low income families, the homeless, and seniors rely on food banks to provide meals on a daily
-                        basis. Food banks are an essential part of our community.</p>
+                        basis. Second Harvest Food Bank continues to safely distribute healthy meals.</p>
                     <a class="text-uppercase" data-project="local" data-target="#projectModal" data-toggle="modal"
                        href="javascript:void(0)">read more</a>
                 </div>
@@ -518,7 +517,7 @@
                        href="javascript:void(0)"><h2>Small
                         Business Relief</h2></a>
                     <p>The economic and personal impacts from the COVID-19 pandemic are increasingly devastating for
-                        small businesses across the U.S.</p>
+                        small businesses across the U.S. It is increasingly hard to make ends meet for owners.</p>
                     <a class="text-uppercase" data-project="business" data-target="#projectModal" data-toggle="modal"
                        href="javascript:void(0)">read more</a>
                 </div>
@@ -551,9 +550,8 @@
                     Make A Difference</h1>
                 <p>
                     We strive to support organizations and businesses in need of financial assistance due to the
-                    COVID-19 pandemic together, as a <span style="color:#5f9ea0">Santa Clara County</span> community. As
-                    residents of Santa Clara County,
-                    our lives have been changed drastically by the novel coronavirus. But, we can fight this pandemic
+                    COVID-19 pandemic together, as a <span style="color:#5f9ea0">Santa Clara County</span> community.
+                    Every single one of our lives have been changed drastically by the novel coronavirus. But, we can fight this pandemic
                     together.
                 </p>
                 <button class="primary-btn mt-20 text-uppercase" data-project="local" data-target="#aboutModal"
@@ -592,8 +590,7 @@
                     <p>
                         All donations to charities will be documented and public at all times. Search <a
                             href="https://docs.google.com/spreadsheets/d/1Bt_hDzc8I8-cb9vHVIOFvsd3n_a1PDqa7gdn0-xzVN4/edit?usp=sharing"
-                            rel="noopener" target="_blank">this</a> spreadsheet for your receipt number to see who was
-                        helped by your funding.
+                            rel="noopener" target="_blank">this</a> spreadsheet to see the impact of your funding.
 
                         <!--                        Email us at-->
                         <!--                        <a href="mailto:santaclaragives@gmail.com">santaclaragives@gmail.com</a> if you’d like to suggest a-->
@@ -713,7 +710,7 @@
             <p class="footer-text mt-1 mb-0">
                 This organization is a partner of <a
                     href="http://www.bayecho.org/" rel="noopener" target="_blank">BayEcho</a>, a 501(c)(3) nonprofit
-                handling our finances.
+                handling our finances
             </p>
             <p class="footer-text mt-1 mb-0">
                 We are supported by <a
