--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 <div aria-hidden="true" aria-labelledby="aboutModalLabel" class="modal fade" id="aboutModal" role="dialog"
      tabindex="-1">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h2 class="modal-title" id="aboutModalLabel">About Us</h2>
@@ -167,12 +167,30 @@
                 </button>
             </div>
             <div class="modal-body">
-                We, Santa Clara Gives, are students from all across the county. We realized that it can be so easy to
-                feel alone and helpless in this unique time, but as a community, we can make a meaningful impact. We
-                strive to support organizations and businesses in need of financial assistance due to the COVID-19
-                pandemic together. If you have any questions for us, feel free to email us at <a
-                    href="mailto:santaclaragives@gmail.com">santaclaragives@gmail.com</a>.
-
+                    We, Santa Clara Gives, are residents all across the county. We realized that it can be so easy to feel
+                alone and helpless in this unique time, but as a community, we can make a meaningful impact.
+                <br>
+                <picture>
+                    <source srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/logo/apapa.jpg/optimise?auth=MTcwNDcxNzM2NQ__">
+                    <img alt="Promo Flyer" class="content-image img-fluid d-block mx-auto"
+                         loading="lazy"
+                         src="img/logo/apapa.jpg">
+                </picture>
+                <br>
+                We are the new Santa Clara chapter of Asian Pacific Islander American Public Affairs (APAPA), a
+                non-profit and non-partisan organization with a diverse membership representing all communities
+                throughout the nation. APAPA’s mission is to empower Asian and Pacific Islander Americans through
+                education, leadership, and active participation in civic and public affairs.
+                <br>
+                <br>
+                We believe that times like these test our humanity, which is why it is so essential for us to come
+                together as a community. Santa Clara County is one of the first counties deeply affected by the novel
+                coronavirus in California, but we know that there is so much we can do together. Join us in the fight
+                against COVID-19.
+                <br>
+                <br>
+                If you have any questions for us, feel free to email us at <a
+                        href="mailto:santaclaragives@gmail.com">santaclaragives@gmail.com</a>.
             </div>
             <div class="modal-footer flex-row justify-content-end align-items-center">
                 <a class="primary-btn mt-20 text-uppercase" href="#cModal-donate" style="margin: 0">Donate Now<span
@@ -549,10 +567,10 @@
                 <h1>Together, We Can <br>
                     Make A Difference</h1>
                 <p>
-                    We strive to support organizations and businesses in need of financial assistance due to the
-                    COVID-19 pandemic together, as a <span style="color:#5f9ea0">Santa Clara County</span> community.
-                    Every single one of our lives have been changed drastically by the novel coronavirus. But, we can fight this pandemic
-                    together.
+                    We’re residents of Santa Clara County. Every single one of our lives have been drastically changed
+                    by the novel coronavirus. But, we can fight this pandemic together. <span style="color:#5f9ea0">Santa Clara Gives</span>
+                    strives to support organizations and businesses in need of financial assistance due to the COVID-19
+                    pandemic as a community.
                 </p>
                 <button class="primary-btn mt-20 text-uppercase" data-project="local" data-target="#aboutModal"
                         data-toggle="modal"
