got rid of wechat share

--- a/index.html
+++ b/index.html
@@ -280,17 +280,17 @@
                         </div>
                     </a>
 
-                    <a aria-label="Share on WeChat"
-                       class="resp-sharing-button__link"
-                       href="https://wechat.com"
-                       rel="noopener" target="_blank">
-                        <div class="resp-sharing-button resp-sharing-button--wechat resp-sharing-button--large">
-                            <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
-                                <img alt="wechat logo image" src="img/svg/wechat.svg" style="width: 14px" width="14px">
-                            </div>
-                            <div>Share on WeChat</div>
-                        </div>
-                    </a>
+<!--                    <a aria-label="Share on WeChat"-->
+<!--                       class="resp-sharing-button__link"-->
+<!--                       href="https://wechat.com"-->
+<!--                       rel="noopener" target="_blank">-->
+<!--                        <div class="resp-sharing-button resp-sharing-button&#45;&#45;wechat resp-sharing-button&#45;&#45;large">-->
+<!--                            <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon&#45;&#45;solid">-->
+<!--                                <img alt="wechat logo image" src="img/svg/wechat.svg" style="width: 14px" width="14px">-->
+<!--                            </div>-->
+<!--                            <div>Share on WeChat</div>-->
+<!--                        </div>-->
+<!--                    </a>-->
 
                     <!-- Sharingbutton Twitter -->
                     <a aria-label="Share on Twitter"
