updated meta key words

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- Author Meta -->
     <meta content="Santa Clara Gives" name="author">
     <!-- Meta Keyword -->
-    <meta content="Santa Clara, Covid, coronavirus, charity, donation, community, nonprofit" name="keywords">
+    <meta content="donation, charity, 501c3, medical supplies, tax deductions, helping the homeless, tax deductible donation, charity organizations" name="keywords">
 
     <link as="style" href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700&display=swap"
           onload="this.onload=null;this.rel='stylesheet'" rel="preload">
