--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
     <!-- Author Meta -->
     <meta content="Santa Clara Gives" name="author">
     <!-- Meta Keyword -->
-    <meta content="donation, charity, 501c3, medical supplies, tax deductions, helping the homeless, tax deductible donation, charity organizations" name="keywords">
+    <meta content="donation, charity, 501c3, medical supplies, tax deductions, helping the homeless, tax deductible donation, charity organizations"
+          name="keywords">
 
     <link as="style" href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700&display=swap"
           onload="this.onload=null;this.rel='stylesheet'" rel="preload">
@@ -187,10 +188,11 @@
                          src="img/logo/apapa.jpg">
                 </picture>
                 <br>
-                We are the new Santa Clara chapter of Asian Pacific Islander American Public Affairs (APAPA), a
-                non-profit and non-partisan organization with a diverse membership representing all communities
-                throughout the nation. APAPA’s mission is to empower Asian and Pacific Islander Americans through
-                education, leadership, and active participation in civic and public affairs.
+                With the support of the new Santa Clara chapter of Asian Pacific Islander American Public Affairs
+                (APAPA), we hope to have your support as well. APAPA is a non-profit and non-partisan organization with
+                a diverse membership representing all communities throughout the nation. APAPA’s mission is to empower
+                Asian and Pacific Islander Americans through education, leadership, and active participation in civic
+                and public affairs.
                 <br>
                 <br>
                 We believe that times like these test our humanity, which is why it is so essential for us to come
