Added new image for medical

--- a/index.html
+++ b/index.html
@@ -459,16 +459,16 @@
                             <div class="content-overlay"></div>
                             <picture>
                                 <source media="(max-width: 770px)"
-                                        srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/p1.jpg/resize?size=402&auth=MTcwNDcxNzM2NQ__">
+                                        srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/ppe%20donation.jpg/resize?size=402&auth=MTcwNDcxNzM2NQ__">
                                 <source media="(max-width: 986px)"
-                                        srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/p1.jpg/resize?size=212&auth=MTcwNDcxNzM2NQ__">
+                                        srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/ppe%20donation.jpg/resize?size=212&auth=MTcwNDcxNzM2NQ__">
                                 <source media="(min-width: 1188px)"
-                                        srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/p1.jpg/resize?size=352&auth=MTcwNDcxNzM2NQ__">
+                                        srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/ppe%20donation.jpg/resize?size=352&auth=MTcwNDcxNzM2NQ__">
                                 <source media="(min-width: 987px)"
-                                        srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/p1.jpg/resize?size=292&auth=MTcwNDcxNzM2NQ__">
-                                <img alt="Medical doctor being tested" class="content-image img-fluid d-block mx-auto"
+                                        srcset="https://pixboost.com/api/2/img/https://santaclaragives.org/img/ppe%20donation.jpg/resize?size=292&auth=MTcwNDcxNzM2NQ__">
+                                <img alt="Donating n95 masks and hygiene supplies" class="content-image img-fluid d-block mx-auto"
                                      loading="lazy"
-                                     src="img/p1.jpg">
+                                     src="img/ppe%20donation.jpg">
                             </picture>
                             <div class="content-details fadeIn-bottom">
                                 <a class="head-btn btn text-uppercase" href="#donate">Donate Now</a>
