Added ppe/food options

--- a/index.html
+++ b/index.html
@@ -607,7 +607,10 @@
                 <h1>Donate Now</h1>
                 <p>
                     Your donation makes a difference! Contribute to the COVID-19 emergency relief efforts by making a
-                    <b style="color: black">tax-deductible</b> donation today.
+                    <b style="color: black">tax-deductible</b> donation today. <br>
+                    Want to donate PPE or food items directly? Email us at <a
+                        href="mailto:santaclaragives+query@gmail.com">santaclaragives@gmail.com</a>
+                    to learn more.
                 </p>
             </div>
         </div>
