updated proj names

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 </div>
                 <div class="details">
                     <a data-project="local" data-target="#projectModal" data-toggle="modal" href="javascript:void(0)">
-                        <h2>Local Food Bank</h2></a>
+                        <h2>Second Harvest Food Bank</h2></a>
                     <p>Low income families, the homeless, and seniors rely on food banks to provide meals on a daily
                         basis. Second Harvest Food Bank continues to safely distribute healthy meals.</p>
                     <a class="text-uppercase" data-project="local" data-target="#projectModal" data-toggle="modal"
@@ -513,8 +513,7 @@
                 </div>
                 <div class="details">
                     <a data-project="business" data-target="#projectModal" data-toggle="modal"
-                       href="javascript:void(0)"><h2>Small
-                        Business Relief</h2></a>
+                       href="javascript:void(0)"><h2>Small Business Relief Fund</h2></a>
                     <p>The economic and personal impacts from the COVID-19 pandemic are increasingly devastating for
                         small businesses across the U.S. It is increasingly hard to make ends meet for owners.</p>
                     <a class="text-uppercase" data-project="business" data-target="#projectModal" data-toggle="modal"
@@ -548,8 +547,7 @@
                 </div>
                 <div class="details">
                     <a data-project="medical" data-target="#projectModal" data-toggle="modal" href="javascript:void(0)">
-                        <h2>Medical
-                            Supplies</h2></a>
+                        <h2>Valley Medical Foundation</h2></a>
                     <p>Hospitals are rapidly running out of supplies and healthcare workers are tirelessly working
                         against the clock. Santa Clara’s Valley Medical Center Foundation needs your help.</p>
                     <a class="text-uppercase" data-project="medical" data-target="#projectModal" data-toggle="modal"
