--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
     </noscript>
 
 
-<!--    <link href="css/magnific-popup.css" rel="stylesheet">-->
-<!--    <link href="css/nice-select.css" rel="stylesheet">-->
-<!--    <link as="style" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"-->
-<!--          onload="this.onload=null;this.rel='stylesheet'"-->
-<!--          rel="preload">-->
-<!--    <noscript>-->
-<!--        <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">-->
-<!--    </noscript>-->
+    <!--    <link href="css/magnific-popup.css" rel="stylesheet">-->
+    <!--    <link href="css/nice-select.css" rel="stylesheet">-->
+    <!--    <link as="style" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"-->
+    <!--          onload="this.onload=null;this.rel='stylesheet'"-->
+    <!--          rel="preload">-->
+    <!--    <noscript>-->
+    <!--        <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">-->
+    <!--    </noscript>-->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link as="style" href="css/bootstrap-table.min.css"
           onload="this.onload=null;this.rel='stylesheet'"
@@ -454,7 +454,7 @@
                 <a data-placement="top" data-toggle="tooltip" href="quarters/2020/q1"
                    onclick="getOutboundLink('quarters/2020/q1');" target="_blank"
                    title="Take a look at our quarter one report">Q1
-                   Report</a>
+                    Report</a>
                 <!--                <a class="head-btn btn text-uppercase" href="#donate">Donate Now</a>-->
             </div>
         </div>
@@ -488,7 +488,6 @@
             </div>
         </div>
         <div class="row" id="projectsContainer">
-
             <div class="col-lg-4 col-md-4 project-wrap">
                 <div class="single-project">
                     <div class="content">
@@ -515,8 +514,19 @@
                     </div>
                 </div>
                 <div class="details">
-                    <a data-project="local" data-target="#projectModal" data-toggle="modal" href="javascript:void(0)">
-                        <h2>Second Harvest Food Bank</h2></a>
+                    <div>
+                        <a class="carousel-control-next only-mobile" data-slide="next" href="#projectsContainer"
+                           role="button">
+                            <span aria-hidden="true" class="carousel-control-next-icon"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        <a class="carousel-control-prev only-mobile" data-slide="prev" href="#projectsContainer"
+                           role="button">
+                            <span aria-hidden="true" class="carousel-control-prev-icon"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <h2>Second Harvest Food Bank</h2>
+                    </div>
                     <p>Low income families, the homeless, and seniors rely on food banks to provide meals on a daily
                         basis. Second Harvest Food Bank continues to safely distribute healthy meals.</p>
                     <a class="text-uppercase" data-project="local" data-target="#projectModal" data-toggle="modal"
@@ -549,8 +559,19 @@
                     </div>
                 </div>
                 <div class="details">
-                    <a data-project="business" data-target="#projectModal" data-toggle="modal"
-                       href="javascript:void(0)"><h2>Small Business Relief Fund</h2></a>
+                    <div>
+                        <a class="carousel-control-next only-mobile" data-slide="next" href="#projectsContainer"
+                           role="button">
+                            <span aria-hidden="true" class="carousel-control-next-icon"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        <a class="carousel-control-prev only-mobile" data-slide="prev" href="#projectsContainer"
+                           role="button">
+                            <span aria-hidden="true" class="carousel-control-prev-icon"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <h2>Small Business Relief Fund</h2>
+                    </div>
                     <p>The economic and personal impacts from the COVID-19 pandemic are increasingly devastating for
                         small businesses across the U.S. It is increasingly hard to make ends meet for owners.</p>
                     <a class="text-uppercase" data-project="business" data-target="#projectModal" data-toggle="modal"
@@ -584,8 +605,19 @@
                     </div>
                 </div>
                 <div class="details">
-                    <a data-project="medical" data-target="#projectModal" data-toggle="modal" href="javascript:void(0)">
-                        <h2>Valley Medical Foundation</h2></a>
+                    <div>
+                        <a class="carousel-control-next only-mobile" data-slide="next" href="#projectsContainer"
+                           role="button">
+                            <span aria-hidden="true" class="carousel-control-next-icon"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        <a class="carousel-control-prev only-mobile" data-slide="prev" href="#projectsContainer"
+                           role="button">
+                            <span aria-hidden="true" class="carousel-control-prev-icon"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <h2>Valley Medical Foundation</h2>
+                    </div>
                     <p>Hospitals are rapidly running out of supplies and healthcare workers are tirelessly working
                         against the clock. Santa Clara’s Valley Medical Center Foundation needs your help.</p>
                     <a class="text-uppercase" data-project="medical" data-target="#projectModal" data-toggle="modal"
@@ -594,6 +626,11 @@
 
             </div>
 
+            <ol class="carousel-indicators only-mobile">
+                <li class="active" data-slide-to="0" data-target="#projectsContainer"></li>
+                <li data-slide-to="1" data-target="#projectsContainer"></li>
+                <li data-slide-to="2" data-target="#projectsContainer"></li>
+            </ol>
         </div>
     </div>
 </section>
