optional venmo added

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
 <div id="tmpSticky" style="height: 70px"></div>
 
-<div class="side-venmo shadow" style="display: none; height: 0">
+<div class="side-venmo shadow" style="display: none; opacity: 0">
     <div class="x-out"><i class="fa fa-times-circle"></i></div>
     Want to use Venmo or Apple Pay?
     <div>
-        Click here to go to our alternate site.
+        Click <a href="https://givebutter.com/santaclaragives" target="_blank" onclick="getOutboundLink('https://givebutter.com/santaclaragives'); return true;">here</a> to go to our alternate site.
     </div>
 </div>
 
