--- a/index.html
+++ b/index.html
@@ -443,11 +443,11 @@
                         <span class="stat-desc">Masks Donated</span>
                     </div>
                     <div>
-                        <span class="past-stat" data-count-up="6050"></span>
-                        <span class="stat-desc">Dollars Received</span>
+                        <span class="past-stat" data-count-up="6135"></span>
+                        <span class="stat-desc">Dollars Raised</span>
                     </div>
                     <div>
-                        <span class="past-stat" data-count-up="52"></span>
+                        <span class="past-stat" data-count-up="74"></span>
                         <span class="stat-desc">Donors</span>
                     </div>
                 </a>
