--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
                     Makes a Difference.
                 </h1>
                 <div class="line-separator"></div>
-                <a class="stat-container" data-placement="top" data-toggle="tooltip" href="quarters/2020/q1"
-                   onclick="getOutboundLink('quarters/2020/q1');" target="_blank"
-                   title="Take a look at our quarter one report">
+                <a class="stat-container" data-placement="top" data-toggle="tooltip" href="trimesters/2020/t2"
+                   onclick="getOutboundLink('trimesters/2020/t2');" target="_blank"
+                   title="Take a look at our trimester two report">
                     <div>
                         <span class="past-stat" data-count-up="5622"></span>
                         <span class="stat-desc">Masks Donated</span>
@@ -451,9 +451,9 @@
                         <span class="stat-desc">Donors</span>
                     </div>
                 </a>
-                <a data-placement="top" data-toggle="tooltip" href="quarters/2020/q1"
-                   onclick="getOutboundLink('quarters/2020/q1');" target="_blank"
-                   title="Take a look at our quarter one report">Q1
+                <a data-placement="top" data-toggle="tooltip" href="trimesters/2020/t2"
+                   onclick="getOutboundLink('trimesters/2020/t2');" target="_blank"
+                   title="Take a look at our trimester two report">T2
                     Report</a>
                 <!--                <a class="head-btn btn text-uppercase" href="#donate">Donate Now</a>-->
             </div>
@@ -699,9 +699,9 @@
                 <div class="single-info">
                     <h4>Complete Transparency</h4>
                     <p>
-                        All donations to charities will be documented and public at all times. Read our quarterly <a
-                            href="/quarters/current"
-                            onclick="getOutboundLink('https://santaclaragives.org/quarters/current'); "
+                        All donations to charities will be documented and public at all times. Read our triannual <a
+                            href="/trimesters/current"
+                            onclick="getOutboundLink('https://santaclaragives.org/trimesters/current'); "
                             rel="noopener" target="_blank">reports</a> to see the impact of your funding.
 
                         <!--                        Email us at-->
